# Intellix

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.save  README.md  SEO_OPTIMIZATION_REPORT.md  UX_IMPROVEMENTS.md  cached_path_tree.txt  check_log.txt  check_output.txt  check_output_utf8.txt  check_vector.php  composer.json  docker-compose.yml  docker-entrypoint.sh  extracted_prosits.txt  go.mod  go.sum  package-lock.json  package.json  read_docx.php  read_docx.py  service.txt  test_qdrant_real.php  vite.config.ts
.cursor/rules/: laravel-boost.mdc
ai/: lmstudio.go  openrouter.go
app/Actions/: GenerateFlashCardsAction.php  ReviewFlashCardAction.php
app/Enums/: AccessRole.php  NoteType.php  PrositSource.php  ResourceStatus.php
app/Jobs/: GenerateExamJob.php  GeneratePrositFieldsJob.php  ProcessResourceJob.php
app/Logging/: RustJsonFormatter.php  RustStderrHandler.php
app/Mail/: CerJobComplete.php
app/Models/: Access.php  Cahier.php  Chapter.php  Competence.php  Course.php  Exam.php  FlashCard.php  Module.php  Note.php  Prosit.php  Question.php  Resource.php  ResourceChunk.php  SeoMeta.php  User.php  UserAchievement.php  UserAiSetting.php  UserChatAiSetting.php  UserEmbeddingAiSetting.php
app/Observers/: FlashCardObserver.php  ResourceObserver.php
app/Policies/: AccessPolicy.php  CahierPolicy.php  FlashCardPolicy.php  ResourcePolicy.php
app/Providers/: AppServiceProvider.php
app/Services/: AiModelManager.php  CerMicroserviceClient.php  CerMicroserviceSigner.php  CerService.php  ExamGenerationService.php  FlashcardGenerator.php  PrositGenerationService.php  QdrantService.php  ResourceDocumentExtractor.php  ResourceIngestionService.php  ResourceUploadService.php  RustBinaryExecutor.php  TextChunker.php  UserAiChatService.php  UserAiProviderResolver.php  UserEmbeddingService.php  VectorService.php
bootstrap/: app.php
cmd/api/: main.go
config/: app.php  logging.php  services.php
core/: extractor.go  extractor_test.go  models.go  themes.go
docs/: RUST_SERVICE_USAGE.md
files/: PROSIT ALLER N°05.docx
generator/: base.go  bilan.go  conclusion.go  integration_test.go  manager.go  realisation.go  references.go  validation.go
public/: robots.txt  sitemap.xml  sw.js
routes/: api.php  console.php  settings.php  web.php
src/: ingest.rs  log.rs  main.rs
template/: cover.tex  main.aux  main.fls  main.tex
tests/: TestCase.php
web/: astro.config.mjs  package-lock.json  package.json
(+276 files in other folders)
