[package]
name = "intellix"
version = "0.1.0"
edition = "2021"

# Binary target configuration
[[bin]]
name = "intellix"
path = "src/main.rs"

[dependencies]
zip = "7.2.0"
scraper = "0.25.0"
quick-xml = "0.39.0"
thiserror = "1.0.69"
serde_json = "1.0.149"
clap = { version = "4.5.55", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
pdf-extract = "0.10"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls", "stream"] }
html2md-rs = "0.10"
chrono = { version = "0.4", features = ["serde"] }
fsrs = "5.2"
tokio = { version = "1.37", features = ["full"] }
qdrant-client = "1.10.1"
tiktoken-rs = "0.5.9"
futures = "0.3.30"
anyhow = "1.0.86"
rayon = "1.10.0"
tempfile = "3.10"
uuid = { version = "1.8", features = ["v4", "serde"] }
rust-bert = { version = "0.23.0", features = ["download-libtorch"] }
indicatif = "0.17"
console = "0.15"
console_fix = { package = "console", version = "0.16.2", features = ["std"] }

# Release profile settings
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Cross-compilation dependencies (if needed)
[target.'cfg(target_os = "windows")'.dependencies]
# Add Windows-specific deps here if needed

[target.'cfg(target_os = "linux")'.dependencies]
# Add Linux-specific deps here if needed

[target.'cfg(target_os = "macos")'.dependencies]
# Add macOS-specific deps here if needed
